# luigui

./: .env.example  .gitignore  Novo(a) Documento de Texto.txt  README.md  docker-compose.yml  pyproject.toml  test.py
app-luigui/: package-lock.json  package.json
app-luigui/app/: ClientLayout.tsx  page.tsx
app-luigui/app/databases/: page.tsx
app-luigui/app/queries/: page.tsx
app-luigui/app/teste/: page.tsx
app-luigui/components/: database-form-dialog.tsx
gui/: middleware.ts  package-lock.json  package.json  question-answer-interface.tsx
gui/app/: ClientLayout.tsx  auth-layout.tsx  layout.tsx  page.tsx  queries.tsx  root-layout-content.tsx
gui/app/databases/: page.tsx
gui/app/login/: page.tsx
gui/app/queries/: page.tsx
gui/app/register/: page.tsx
gui/app/templates/: page.tsx
gui/components/: database-form-dialog.tsx  protected-route.tsx
gui/components/ui/: select.tsx
gui/config/: constants.ts
gui/contexts/: AuthContext.tsx  auth-context.tsx
gui/services/: database.ts
rag_to_sql/: manage.py
rag_to_sql/api/: admin.py  models.py  permissions.py  schemas.py  serializer.py  urls.py  views.py
rag_to_sql/api/migrations/: 0010_alter_database_user.py
rag_to_sql/rag_to_sql/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: SQLIndexDemo.ipynb
src/: .gitignore  update_admin.py
src/api/: admin.py  models.py  permissions.py  schemas.py  serializer.py  tests.py  urls.py  views.py
src/core/: settings.py  urls.py
tcc/: db.sqlite3  manage.py
tcc/ragtosql/: asgi.py  settings.py  urls.py  wsgi.py
templatebootstrap/core/: urls.py
(+20 files in other folders)
