[project]
name = "rag-to-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "argon2-cffi>=23.1.0",
    "django>=5.1.5",
    "djangorestframework>=3.15.2",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-openai>=0.3.15",
    "llama-index-vector-stores-postgres>=0.4.2",
    "psycopg[binary]>=3.2.4",
    "python-dotenv>=1.0.1",
]
